--- a/training-camps.html
+++ b/training-camps.html
@@ -626,7 +626,7 @@ nav {
 }
 
 .nav-menu > li.has-submenu > a.active + .submenu li {
-    background-color: #E53935;
+    background-color: white;
 }
 
 .nav-menu > li.has-submenu > a.active + .submenu a {
@@ -1158,7 +1158,7 @@ document.addEventListener('keydown', function(event) {
                 </div>
 
                 <div class="gallery-item">
-                   <img src="images/gallery/voyennye-igry-2024-1.jpg"
+                   <img src="images/yunarmiya/voyennye-igry-2024-1.jpg"
              alt="Марш-бросок"
              class="gallery-placeholder">
                     <div class="gallery-caption">Марш-бросок</div>
