--- a/help-at-home.html
+++ b/help-at-home.html
@@ -466,7 +466,7 @@ nav {
 
 /* КРАСНЫЙ ФОН ДЛЯ АКТИВНОЙ СТРАНИЦЫ - НА ПУНКТАХ МЕНЮ */
 .nav-menu > li.has-submenu > a.active + .submenu li {
-    background-color: #E53935;
+    background-color: white;
 }
 
 .nav-menu > li.has-submenu > a.active + .submenu a {
