--- a/safety-dialogue.html
+++ b/safety-dialogue.html
@@ -592,7 +592,7 @@ nav {
 }
 
 .nav-menu > li.has-submenu > a.active + .submenu li {
-    background-color: #E53935;
+    background-color: white;
 }
 
 .nav-menu > li.has-submenu > a.active + .submenu a {
