--- a/vneurochnaya.html
+++ b/vneurochnaya.html
@@ -845,7 +845,7 @@
                     <li>Изучение расширенной программы ОБЗР</li>
                     <li>Подробный отчет об участии</li>
                 </ul>
-                <a href="detalnaya-stranica-4.html" class="info-block-button">Подробнее</a>
+                <a href="olimpiady.html" class="info-block-button">Подробнее</a>
             </div>
 
              <!-- БЛОК 5 (светлый фон - альтернатива) -->
@@ -1468,5 +1468,6 @@ window.addEventListener('load', () => {
 </html>
 
  
+
 
 
