--- a/vneurochnaya.html
+++ b/vneurochnaya.html
@@ -733,7 +733,7 @@
                             <li><a href="yunarmiya">Юнармия</a></li>
                             <li><a href="yuid">ЮИД (Юные инспекторы движения)</a></li>
                             <li><a href="zarnica">Зарница 2.0</a></li>
-                            <li><a href="olimpiady">Олимпиады по ОБЗР</a></li>
+                            <li><a href="olimpiady.html">Олимпиады по ОБЗР</a></li>
                             <li><a href="uchebno-polevye-sbory">Учебно-полевые сборы</a></li>
                             <li><a href="vzaimodejstvie">Взаимодействие с партнёрами</a></li>
                         </ul>
@@ -1468,6 +1468,7 @@ window.addEventListener('load', () => {
 </html>
 
  
+
 
 
 
