--- a/vneurochnaya.html
+++ b/vneurochnaya.html
@@ -732,7 +732,7 @@
                         <ul class="submenu">
                             <li><a href="yunarmiya">Юнармия</a></li>
                             <li><a href="yuid">ЮИД (Юные инспекторы движения)</a></li>
-                            <li><a href="zarnica">Зарница 2.0</a></li>
+                            <li><a href="zarnica.html">Зарница 2.0</a></li>
                             <li><a href="olimpiady.html">Олимпиады по ОБЗР</a></li>
                             <li><a href="uchebno-polevye-sbory">Учебно-полевые сборы</a></li>
                             <li><a href="vzaimodejstvie">Взаимодействие с партнёрами</a></li>
@@ -829,7 +829,7 @@
                     <li>Полоса препятствий и киберполигон</li>
                     <li>Командная работа: взаимовыручка, распределение ролей, ответственность</li></li>
                 </ul>
-                <a href="detalnaya-stranica-4.html" class="info-block-button">Подробнее</a>
+                <a href="zarnica.html" class="info-block-button">Подробнее</a>
             </div>
 
             <!-- БЛОК 4 (синий фон) -->
@@ -1468,6 +1468,7 @@ window.addEventListener('load', () => {
 </html>
 
  
+
 
 
 
