--- a/novosti.html
+++ b/novosti.html
@@ -903,7 +903,7 @@
                 <div class="news-card-content">
                     <div class="news-card-meta">
                         <span class="news-card-date">📅 11 декабря 2025</span>
-                        <span class="news-card-category competition">Мероприятия</span>
+                        <span class="news-card-category event">Мероприятия</span>
                     </div>
                     <h3 class="news-card-title">Учебно – тренировочные сборы для наставников команд игры «Зарница 2.0».</h3>
                     <p class="news-card-excerpt">
@@ -912,16 +912,16 @@
                      <div class="news-card-full-text">
                         <p> Вместе с другими педагогами ОБЗР нашего округа принял участие в учебно – тренировочных сборах для подготовки наставников
                         команд к проведению Всероссийской военно-патриотической игры «Зарница 2.0», которые состоялись в Сергачском муниципальном округе</p>
-                        <p>За все время сборов посетили 5 локаций, где с нами было проведено обучение по следующим направлениям:
-✅«Состязание командиров»;
-✅«Состязание операторов БПЛА»;
-✅«Состязание медиков»;
-✅«Состязание саперов»;
-✅«Состязание штурмовиков»;
-✅«Состязание военкоров» (дистанционно);
-✅«Инженерное оборудование и маскировка позиций»;
-✅«Тактическая медицина»;
-✅«Огневая подготовка»;
+                        <p>За все время сборов посетили 5 локаций, где с нами было проведено обучение по следующим направлениям:<br>
+✅«Состязание командиров»;<br>
+✅«Состязание операторов БПЛА»;<br>
+✅«Состязание медиков»;<br>
+✅«Состязание саперов»;<br>
+✅«Состязание штурмовиков»;<br>
+✅«Состязание военкоров» (дистанционно);<br>
+✅«Инженерное оборудование и маскировка позиций»;<br>
+✅«Тактическая медицина»;<br>
+✅«Огневая подготовка»;<br>
 ✅«Тактическая подготовка».</p>
                         <p>Мероприятие имело большое практическое значение для подготовки к проведению муниципального этапа "Зарницы 2.0".</p>
                     </div>
