--- a/novosti.html
+++ b/novosti.html
@@ -1237,12 +1237,12 @@
                 </div>
                 <div class="news-card-content">
                     <div class="news-card-meta">
-                        <span class="news-card-date">📅 Март 2025</span>
+                        <span class="news-card-date">📅 Март 2026</span>
                         <span class="news-card-category" style="background: var(--color-danger);">Анонс</span>
                     </div>
                     <h3 class="news-card-title">Муниципальный этап военно-спортивной игры "Зарница 2.0"</h3>
                     <p class="news-card-excerpt">
-                        Победители и призёры школьного этапа военно-спортивной игры "Зарница 2.0 примут участе в муниципальном этапе, который будет проходить на базе ФОК "Олимп"
+                        Победители и призёры школьного этапа военно-спортивной игры "Зарница 2.0" примут участе в муниципальном этапе, который будет проходить на базе ФОК "Олимп"
                     </p>
                     <div class="news-card-footer">
                         <a href="#" class="news-card-link">Подробнее</a>
