--- a/vneurochnaya.html
+++ b/vneurochnaya.html
@@ -734,7 +734,7 @@
                             <li><a href="yuid">ЮИД (Юные инспекторы движения)</a></li>
                             <li><a href="zarniсa.html">Зарница 2.0</a></li>
                             <li><a href="olimpiady.html">Олимпиады по ОБЗР</a></li>
-                            <li><a href="uchebno-polevye-sbory">Учебно-полевые сборы</a></li>
+                            <li><a href="sbory">Учебно-полевые сборы</a></li>
                             <li><a href="vzaimodejstvie">Взаимодействие с партнёрами</a></li>
                         </ul>
                     </li>
@@ -860,7 +860,7 @@
                     <li>Реальные навыки военного дела</li>
                     <li>Знакомство со службой изнутри</li>
                 </ul>
-                <a href="detalnaya-stranica-4.html" class="info-block-button">Подробнее</a>
+                <a href="sbory" class="info-block-button">Подробнее</a>
             </div>
              <!-- БЛОК 6 (синий фон) -->
                  <div class="info-block light">
@@ -1468,6 +1468,7 @@ window.addEventListener('load', () => {
 </html>
 
  
+
 
 
 
