--- a/olimpiady.html
+++ b/olimpiady.html
@@ -1507,9 +1507,9 @@
                             <li><a href="yunarmiya">Юнармия</a></li>
                             <li><a href="yuid" style="font-weight: 700; color: var(--color-primary);">ЮИД (Юные инспекторы движения)</a></li>
                             <li><a href="zarnica">Зарница 2.0</a></li>
-                            <li><a href="olimpiady-obzr">Олимпиады по ОБЗР</a></li>
-                            <li><a href="uchebno-polevye-sbory">Учебно-полевые сборы</a></li>
-                            <li><a href="vzaimodejstvie-partnery">Взаимодействие с партнёрами</a></li>
+                            <li><a href="olimpiady">Олимпиады по ОБЗР</a></li>
+                            <li><a href="sbory">Учебно-полевые сборы</a></li>
+                            <li><a href="partnery">Взаимодействие с партнёрами</a></li>
                         </ul>
                     </li>
 
