--- a/documents.html
+++ b/documents.html
@@ -1184,7 +1184,7 @@
                         <ul class="submenu">
                             <li><a href="yunarmiya">Юнармия</a></li>
                             <li><a href="yuid">ЮИД (Юные инспекторы движения)</a></li>
-                            <li><a href="zarnica">Зарница 2.0</a></li>
+                            <li><a href="zarnica.html">Зарница 2.0</a></li>
                             <li><a href="uchebno-polevye-sbory">Учебно-полевые сборы</a></li>
                             <li><a href="sorevnovaniya">Соревнования и конкурсы</a></li>
                         </ul>
