--- a/zarniсa.html
+++ b/zarniсa.html
@@ -1416,11 +1416,11 @@
                         <a href="vneurochnaya.html" class="active" onclick="return handleSubmenuClick(event, this)">Активности</a>
                         <ul class="submenu">
                             <li><a href="yunarmiya">Юнармия</a></li>
-                            <li><a href="yuid" style="font-weight: 700; color: var(--color-primary);">ЮИД (Юные инспекторы движения)</a></li>
+                            <li><a href="yuid">ЮИД (Юные инспекторы движения)</a></li>
                             <li><a href="zarnitsa" style="font-weight: 700; color: var(--color-primary);">Зарница 2.0</a></li>
                             <li><a href="olimpiady">Олимпиады по ОБЗР</a></li>
-                            <li><a href="uchebno-polevye-sbory">Учебно-полевые сборы</a></li>
-                            <li><a href="vzaimodejstvie-partnery">Взаимодействие с партнёрами</a></li>
+                            <li><a href="sbory">Учебно-полевые сборы</a></li>
+                            <li><a href="partnery">Взаимодействие с партнёрами</a></li>
                         </ul>
                     </li>
 
