--- a/yunarmiya.html
+++ b/yunarmiya.html
@@ -1500,7 +1500,7 @@
                         <ul class="submenu">
                             <li><a href="yunarmiya.html" style="font-weight: 700; color: var(--color-primary);">Юнармия</a></li>
                             <li><a href="yuid">ЮИД (Юные инспекторы движения)</a></li>
-                            <li><a href="zarniсa">Зарница 2.0</a></li>
+                            <li><a href="zarniсa.html">Зарница 2.0</a></li>
                             <li><a href="olimpiady">Олимпиады по ОБЗР</a></li>
                             <li><a href="sbory">Учебно-полевые сборы</a></li>
                             <li><a href="partnery">Взаимодействие с партнёрами</a></li>
