--- a/yuid.html
+++ b/yuid.html
@@ -1503,7 +1503,7 @@
                         <ul class="submenu">
                             <li><a href="yunarmiya">Юнармия</a></li>
                             <li><a href="yuid" style="font-weight: 700; color: var(--color-primary);">ЮИД (Юные инспекторы движения)</a></li>
-                            <li><a href="zarnica.html">Зарница 2.0</a></li>
+                            <li><a href="zarniсa.html">Зарница 2.0</a></li>
                             <li><a href="olimpiady">Олимпиады по ОБЗР</a></li>
                             <li><a href="sbory">Учебно-полевые сборы</a></li>
                             <li><a href="partnery">Взаимодействие с партнёрами</a></li>
