--- a/vzaimodejstvie.html
+++ b/vzaimodejstvie.html
@@ -1147,7 +1147,7 @@
                             <li><a href="zarnica">Зарница 2.0</a></li>
                             <li><a href="olimpiady-obzr">Олимпиады по ОБЗР</a></li>
                             <li><a href="sbory.html">Военно-полевые сборы</a></li>
-                            <li><a href="partners.html" style="font-weight: 700; color: var(--color-primary);">Взаимодействие с партнёрами</a></li>
+                            <li><a href="vzaimodejstvie.html" style="font-weight: 700; color: var(--color-primary);">Взаимодействие с партнёрами</a></li>
                         </ul>
                     </li>
 
