--- a/sbory.html
+++ b/sbory.html
@@ -1007,7 +1007,7 @@
                             <li><a href="zarnica">Зарница 2.0</a></li>
                             <li><a href="olimpiady-obzr">Олимпиады по ОБЗР</a></li>
                             <li><a href="sbory.html" style="font-weight: 700; color: var(--color-primary);">Военно-полевые сборы</a></li>
-                            <li><a href="vzaimodejstvie-partnery">Взаимодействие с партнёрами</a></li>
+                            <li><a href="vzaimodejstvie">Взаимодействие с партнёрами</a></li>
                         </ul>
                     </li>
 
