--- a/music-projects.html
+++ b/music-projects.html
@@ -1054,11 +1054,11 @@ function closeRestoreNotification() {
                 isEmpty: false
             },
             {
-                title: "Трек 2 — будет добавлен позже",
-                subtitle: "Загрузите MP3-файл 02.mp3",
-                filename: "02.mp3",
-                duration: "0:00",
-                isEmpty: true
+                title: "02 Новогодняя песня",
+                subtitle: "С новым 2026 годом!",
+                filename: "02-novogodnyaya-pesnya.mp3",
+                duration: "3:17",
+                isEmpty: false
             },
             {
                 title: "Трек 3 — будет добавлен позже",
@@ -2530,6 +2530,7 @@ window.addEventListener('load', () => {
 </body>
 
 </html>
+
 
 
 
