--- a/music-projects.html
+++ b/music-projects.html
@@ -1055,7 +1055,7 @@ function closeRestoreNotification() {
             },
             {
                 title: "02 Новогодняя песня",
-                subtitle: "С новым 2026 годом!",
+                subtitle: "С Новым 2026 годом!",
                 filename: "02-novogodnyaya-pesnya.mp3",
                 duration: "3:17",
                 isEmpty: false
@@ -2530,6 +2530,7 @@ window.addEventListener('load', () => {
 </body>
 
 </html>
+
 
 
 
