--- a/interactive.html
+++ b/interactive.html
@@ -954,7 +954,7 @@
             <!-- hCAPTCHA ВИДЖЕТ -->
                 <!-- ⚠️ ВАЖНО: Замените "ВСТАВЬТЕ_ВАШ_HCAPTCHA_SITEKEY" на реальный Site Key от hCaptcha -->
                 <div class="h-captcha" 
-                     data-sitekey="ВСТАВЬТЕ_ВАШ_HCAPTCHA_SITEKEY"
+                     data-sitekey="b982a2d2-6634-469e-a95c-a30a38842b94"
                      data-callback="onCaptchaSuccess">
                 </div>
 
@@ -1884,6 +1884,7 @@ window.addEventListener('load', () => {
 </body>
 </html>
         
+
 
 
 
