--- a/interactive.html
+++ b/interactive.html
@@ -1523,7 +1523,7 @@ function handleSubmenuClick(event, element) {
     }
     return true;
 }
-
+ </script>
 
 <script src="script.js"></script>
 <!-- Минимизированный плавающий плейер -->
@@ -1883,6 +1883,7 @@ window.addEventListener('load', () => {
 </body>
 </html>
         
+
 
 
 
