--- a/feedback.html
+++ b/feedback.html
@@ -833,7 +833,7 @@ document.addEventListener('keydown', function(event) {
                 <span class="channel-icon">☎️</span>
                 <h3>Телефон школы</h3>
                 <p>Для срочных вопросов, согласования встреч</p>
-                <div class="channel-contact">+7 (831XX) X-XX-XX (администрация)</div>
+                <div class="channel-contact">+78314954449 (администрация)</div>
                 <div class="channel-timing">
                     <strong>Часы работы:</strong>
                     Пн-Пт: 8:00-17:00
@@ -848,7 +848,7 @@ document.addEventListener('keydown', function(event) {
                 <div class="channel-contact">Общешкольные и классные собрания</div>
                 <div class="channel-timing">
                     <strong>График:</strong>
-                    Раз в четверть (по расписанию школы)
+                    По расписанию школы
                 </div>
             </div>
 
@@ -995,11 +995,6 @@ document.addEventListener('keydown', function(event) {
                         <td>Четверг</td>
                         <td>15:00 - 16:30</td>
                         <td>Личная встреча в школе (по записи)</td>
-                    </tr>
-                    <tr>
-                        <td>Суббота</td>
-                        <td>10:00 - 12:00</td>
-                        <td>Онлайн-консультации (по согласованию)</td>
                     </tr>
                 </tbody>
             </table>
