--- a/literature-projects.html
+++ b/literature-projects.html
@@ -1571,7 +1571,7 @@ window.addEventListener('load', () => {
                     <div class="chapter-accordion">
                         <div class="chapter-header" onclick="toggleChapter(this)">
                             <div class="chapter-info">
-                                <h5>Глава 2: Бот-помощник</h5>
+                                <h5>Глава 2. Бот-помощник</h5>
                                 <p>Лиза знакомится в сети с "Мишей", который рекомендует ей бота для улучшения рисунков, 
                                     и, поверив, отправляет боту свои фото.</p>
                             </div>
