--- a/feedback.html
+++ b/feedback.html
@@ -330,13 +330,20 @@ nav {
     box-shadow: 0 4px 12px rgba(0, 61, 122, 0.3);
 }
 
-.submit-button:hover {
+.submit-button:hover:not(:disabled) {
     transform: translateY(-2px);
     box-shadow: 0 6px 20px rgba(0, 61, 122, 0.4);
 }
 
-.submit-button:active {
+.submit-button:active:not(:disabled) {
     transform: translateY(0);
+}
+
+.submit-button:disabled {
+    background: linear-gradient(135deg, #B0BEC5 0%, #90A4AE 100%);
+    cursor: not-allowed;
+    opacity: 0.6;
+    box-shadow: none;
 }
 
 /* График консультаций */
@@ -548,61 +555,28 @@ nav {
     position: absolute;
     top: 100%;
     left: 0;
-    background-color: white;
-    min-width: 320px;
-    max-width: 400px;
+    background-color: var(--color-primary);
+    min-width: 280px;
     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.25);
     border-radius: 0 0 8px 8px;
     list-style: none;
-    padding: 0.75rem 0;
+    padding: 0.5rem 0;
     margin: 0;
     opacity: 0;
     visibility: hidden;
-    transform: translateY(-15px);
-    transition: opacity 0.3s ease, transform 0.3s ease, visibility 0.3s;
-    transition-delay: 0s;
-    border-top: 3px solid var(--color-danger);
+    transform: translateY(-10px);
+    transition: all 0.3s ease;
     z-index: 1000;
 }
 
-.nav-menu > li.has-submenu > a.active + .submenu li {
-    background-color: #E53935;
-}
-
-.nav-menu > li.has-submenu > a.active + .submenu a {
-    color: white;
-}
-
-.nav-menu > li.has-submenu > a.active + .submenu a:hover {
-    background-color: white;
-    color: var(--color-primary);
-}
 
 .nav-menu > li.has-submenu > a.active + .submenu a::before {
-    color: white;
+   
 }
 
 .nav-menu > li.has-submenu > a.active + .submenu a:hover::before {
     color: var(--color-danger);
 }
-
-.nav-menu > li.has-submenu > a:not(.active) + .submenu li {
-    background-color: white;
-}
-
-.nav-menu > li.has-submenu > a:not(.active) + .submenu a {
-    color: var(--color-text-primary);
-}
-
-.nav-menu > li.has-submenu > a:not(.active) + .submenu a:hover {
-    background-color: var(--color-surface);
-    color: var(--color-primary);
-}
-
-.nav-menu > li.has-submenu > a:not(.active) + .submenu a::before {
-    color: var(--color-danger);
-}
-
 .nav-menu > li.has-submenu:hover .submenu {
     opacity: 1;
     visibility: visible;
@@ -617,17 +591,16 @@ nav {
 .submenu a {
     color: white;
     text-decoration: none;
-    padding: 0.65rem 1.5rem;
-    display: flex;
-    align-items: center;
-    transition: all 0.2s ease;
+    padding: 0.75rem 1.5rem;
+    display: block;
+    transition: all 0.3s ease;
     font-size: 0.95rem;
-    line-height: 1.4;
+    border-left: 3px solid transparent;
 }
 
 .submenu a:hover {
-    background-color: white;
-    color: var(--color-primary);
+    background-color: var(--color-primary-hover);
+    border-left-color: var(--color-danger);
     padding-left: 2rem;
 }
 
@@ -982,7 +955,7 @@ document.addEventListener('keydown', function(event) {
 <!-- Сообщения об успехе/ошибке -->
 <div id="formStatus" style="display: none;"></div>
 
-             <button type="submit" class="submit-button" id="submitBtn" disabled>Отправить сообщение</button>
+           <button type="submit" class="submit-button" id="submitBtn" disabled>Отправить сообщение</button>
             </form>
         </div>
 
@@ -1204,8 +1177,7 @@ document.addEventListener('keydown', function(event) {
         </div>
     </div>
     
-    <script>
-        
+    <script> 
     function toggleMenu() {
     const menu = document.getElementById('navMenu');
     menu.classList.toggle('active');
@@ -1655,9 +1627,9 @@ document.getElementById('contactForm').addEventListener('submit', function(event
             formStatus.innerHTML = '✅ Сообщение успешно отправлено! Я отвечу вам в течение 24-48 часов.';
         }
         document.getElementById('contactForm').reset();
-        hcaptcha.reset();
-        submitBtn.disabled = false;
-        submitBtn.innerHTML = 'Отправить сообщение';
+hcaptcha.reset();
+submitBtn.disabled = true; // Блокируем снова
+submitBtn.innerHTML = 'Отправить сообщение';
         setTimeout(function() {
             if (formStatus) formStatus.style.display = 'none';
         }, 10000);
