--- a/feedback.html
+++ b/feedback.html
@@ -420,12 +420,41 @@ nav {
     box-shadow: 0 4px 16px rgba(156, 39, 176, 0.3);
 }
 
-        footer { background-color: var(--color-primary); color: white; padding: 2rem 1rem; margin-top: 4rem; }
-        .footer-content { max-width: 1200px; margin: 0 auto; display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 2rem; }
-        .footer-section h3 { margin-bottom: 1rem; }
-        .footer-section ul { list-style: none; }
-        .footer-section a { color: white; text-decoration: none; opacity: 0.9; }
-        .footer-bottom { max-width: 1200px; margin: 2rem auto 0; padding-top: 2rem; border-top: 1px solid rgba(255,255,255,0.2); text-align: center; font-size: 0.9rem; opacity: 0.8; }
+   footer { background-color: var(--color-primary); color: white; padding: 2rem 1rem; margin-top: 4rem; }
+.footer-content { max-width: 1200px; margin: 0 auto; display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 2rem; }
+.footer-section h3 { margin-bottom: 1rem; }
+.footer-section ul { list-style: none; }
+.footer-section a { 
+    color: white; 
+    text-decoration: none; 
+    opacity: 0.9;
+    display: inline-block;
+    position: relative;
+    padding-bottom: 2px;
+    transition: opacity 0.3s ease;
+}
+
+/* Подчеркивание при hover */
+.footer-section a::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 0;
+    height: 2px;
+    background-color: white;
+    transition: width 0.3s ease;
+}
+
+.footer-section a:hover {
+    opacity: 1;
+}
+
+.footer-section a:hover::after {
+    width: 100%;
+}
+
+.footer-bottom { max-width: 1200px; margin: 2rem auto 0; padding-top: 2rem; border-top: 1px solid rgba(255,255,255,0.2); text-align: center; font-size: 0.9rem; opacity: 0.8; }
         @media (max-width: 768px) { 
         .mobile-menu-toggle { 
         display: block; }
