--- a/grading.html
+++ b/grading.html
@@ -658,12 +658,12 @@ nav {
     transition: all 0.2s ease;
     font-size: 0.95rem;
     line-height: 1.4;
-    font-weight: 700;  /* Обычный вес */
+    font-weight: 400;  /* Обычный вес */
 }
 
 /* Жирный шрифт для "Обратная связь" */
-.submenu a[href="feedback.html"] {
-    font-weight: 400;  /* ЖИРНЫЙ */
+.submenu a[href="grading.html"] {
+    font-weight: 700;  /* ЖИРНЫЙ */
 }
 
 .submenu a:hover {
